# dennys

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: flutter_ci.yml  python_ci.yml
dennys_web_app/: .env  README.md  analysis_options.yaml  pubspec.yaml
dennys_web_app/android/app/: google-services.json
dennys_web_app/dev/Screen/: Welcome.dart  signin_screen.dart  signup_screen.dart
dennys_web_app/dev/game/: map_data.dart  test_game.dart
dennys_web_app/dev/view/: custom_painter.dart  tree_painter.dart  view_tree.dart
dennys_web_app/lib/: add_node.dart  data_service.dart  main.dart  task_data_generator.dart
dennys_web_app/lib/Manual/: Manual_Registration.dart  get_firebase.dart  manual_registration.dart
dennys_web_app/lib/Screen/: Home.dart  signin_screen.dart  signup_screen.dart
dennys_web_app/lib/common/: node_widget.dart
dennys_web_app/lib/game/: map_data.dart  test_game.dart
dennys_web_app/lib/global_setting/: global_tree.dart  test.dart
dennys_web_app/lib/gpt/: main_test.dart  make_tree.dart  openai_connector.dart  task_tree_generator.dart
dennys_web_app/lib/login/: login_page.dart
dennys_web_app/lib/profile/: user_data.dart  user_model.dart  user_model.freezed.dart
dennys_web_app/lib/register/: registration_page.dart
dennys_web_app/lib/view/: custom_painter.dart  view_tree.dart
dennys_web_app/test/: widget_test.dart
dennys_web_app/web/: index.html
dev/: fine.py  fine_test.py  lambda_function.py  pyproject.toml
openai_api/: check_sample.py  fine.py  fine_test.py  openai_api.py  pyproject.toml  sample_prompt.jsonl
randuraft_endpoint/: pyproject.toml  pytest-results.xml
randuraft_endpoint/api/: app.py
randuraft_endpoint/api/models/: task.py
randuraft_endpoint/api/routers/: task.py
randuraft_endpoint/server/: main.py
randuraft_endpoint/services/: .gitignore  create_chat.py  create_task.py  openai.py
randuraft_endpoint/services/saving/: tasks.json  test_data.py
randuraft_web_app/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
randuraft_web_app/.dart_tool/: package_config.json  package_config_subset
randuraft_web_app/.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  Favicons  History  Login Data  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data
randuraft_web_app/.dart_tool/chrome-device/Default/Extension Rules/: LOG
randuraft_web_app/.dart_tool/chrome-device/Default/Extension Scripts/: LOG
randuraft_web_app/.dart_tool/chrome-device/Default/Extension State/: LOG
randuraft_web_app/.dart_tool/chrome-device/Default/Session Storage/: LOG
randuraft_web_app/.dart_tool/chrome-device/Default/Sessions/: Session_13357325423040240  Tabs_13357325463609437
randuraft_web_app/.dart_tool/dartpad/: web_plugin_registrant.dart
randuraft_web_app/dev/Screen/: home.dart  signup_screen.dart  welcome.dart
randuraft_web_app/dev/game/: test_game.dart
randuraft_web_app/dev/view/: custom_painter.dart  tree_painter.dart  view_tree.dart
randuraft_web_app/lib/: firebase_options.dart  main.dart
randuraft_web_app/lib/Manual/: manual_registration.dart
randuraft_web_app/lib/Screen/: README.md  signup_screen.dart
randuraft_web_app/lib/api/: api_service.dart
randuraft_web_app/lib/chat/: chat.dart
randuraft_web_app/lib/common/: node_widget.dart
randuraft_web_app/lib/global_setting/: global_tree.dart
randuraft_web_app/lib/logger/: logger.dart
randuraft_web_app/lib/login/: login_page.dart
randuraft_web_app/lib/models/: task.dart
randuraft_web_app/lib/profile/: user_data.dart  user_provider.dart
randuraft_web_app/lib/register/: registration_page.dart
randuraft_web_app/lib/test/: firebase_test.dart
(+12 files in other folders)
