[tool.poetry]
name = "endpoint"
version = "0.1.0"
description = ""
authors = ["gilmi <65973449+gilmiwired@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.6"
tenacity = "^8.2.3"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
tiktoken = "^0.6.0"
pytest = "^8.1.2"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
