[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["gilmi <65973449+gilmiwired@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.6"
tenacity = "^8.2.3"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
tiktoken = "^0.6.0"
pytest = "^8.1.2"
python-dotenv = "^1.0.1"
requests = "^2.32.1"
types-requests = "^2.32.0.20240521"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

types-requests = "*"