[tool.poetry]
name = "randuraft-endpoint"
version = "0.1.0"
description = ""
authors = ["gilmi <65973449+gilmiwired@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.10"
tenacity = "^8.2.3"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
tiktoken = "^0.6.0"
pytest = "^8.2.0"
python-dotenv = "^1.0.1"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
openai = "^0.27.5"
logging = "^0.4.9.6"
google-generativeai = "^0.5.4"
requests = "^2.32.2"
types-requests = "^2.32.0.20240523"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
ignore = "D100,D101,D102,D103,D104,D105,D106,D107,D200,D201,D202,D203,D204,D205,D206,D207,D208,D209,D210,D211,D212,D213,D214,D215,D300,D301,D302,D400,D401,D402,D403,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414,D415,D416,D417,W503"
max-complexity = 10
max-line-length = 100

[tool.mypy]
exclude = []
plugins = []
ignore_missing_imports = true
explicit_package_bases = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true